# server

./: .gitattributes  .gitignore  .gitmodules  .travis.sh  .travis.yml  Authors.md  Authors_Historic.md  CLAUDE.md  CMakeLists.txt  ChangeLog.md  Doxyfile.in  LICENSE  PLAYERBOT_OPTIMIZATIONS.md  README.md  WARNING  appveyor.yml  issue_template.md
contrib/mysql_to_pgsql/: CMakeLists.txt  README
contrib/mysql_to_pgsql/src/: defines.h  main.cpp
doc/: AuctionHouseBot.md  Authors.md  Authors_Historic.md  CMakeLists.txt  CallForExamples.md  ChangeLog.md  CodingStandard.md  DocStructure.dox  Doxyfile.in  EventAI.md  GdbServer.md  License.md  RequiredPorts.mangosproof  SD2_SQL_guide.md  SD3_SQL_guide.md  ScriptCommands.md  Spell.md  Thanks.md
src/: CMakeLists.txt
src/ah-service/: AhBotDefines.h  BotBrain.cpp  BotBrain.h  CMakeLists.txt  Console_posix.cpp  ItemPool.cpp  ItemPool.h  Main.cpp  MarketSnapshot.cpp  MarketSnapshot.h  ServiceConfig.cpp  ServiceConfig.h  ServiceDatabase.cpp  ServiceDatabase.h  ah-service.conf.dist.in
src/ah-service/tools/: custody_crash_test.md  custody_diff.sql  custody_promotion_runbook.md
src/framework/: CMakeLists.txt
src/framework/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/framework/GameSystem/: Grid.h  GridLoader.h  GridRefManager.h  GridReference.h  NGrid.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerVisitor.h
src/framework/Platform/: CompilerDefs.h  Define.h
src/framework/Policies/: CreationPolicy.h  ObjectLifeTime.cpp  ObjectLifeTime.h  Singleton.h  ThreadingModel.h
src/framework/Utilities/: ByteConverter.h  Callback.h  EventProcessor.cpp  EventProcessor.h  LinkedList.h  TypeList.h  UnorderedMapSet.h
src/game/: CMakeLists.txt  pchdef.cpp  pchdef.h
src/game/AntiCheat/: AntiCheatDefines.h  AntiCheatMgr.cpp  AntiCheatMgr.h  MovementAnticheat.cpp  MovementAnticheat.h  PhysicsValidator.cpp  PhysicsValidator.h
src/game/AuctionHouseBot/: AhBotSystemOwner.h  AuctionHouseBot.cpp  AuctionHouseBot.h  AuctionIntentExecutor.cpp  AuctionIntentExecutor.h  BrowsePending.cpp  BrowsePending.h  CMakeLists.txt  CustodyDeferred.h  CustodyLedger.cpp  CustodyLedger.h  CustodyService.cpp  CustodyService.h  ahbot.conf.dist.in
src/game/BattleGround/: BattleGround.cpp  BattleGround.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundWS.cpp  BattleGroundWS.h  CMakeLists.txt
src/game/ChatCommands/: AHBotCommands.cpp  AccountCommands.cpp  AhServiceCommands.cpp  AntiCheatCommands.cpp  AuctionHouseCommands.cpp  BanAndKickCommands.cpp  CastAndAuraCommands.cpp  CommunicationCommands.cpp  CreatureCommands.cpp  DebugCommands.cpp  DebugVisCommands.cpp  EventCommands.cpp  GMCommands.cpp  GMTicketCommands.cpp  GameObjectCommands.cpp  GridCommands.cpp  GuildCommands.cpp  InstanceCommands.cpp  Level0.cpp  Level1.cpp  Level2.cpp  Level3.cpp  Level4.cpp  ListCommands.cpp  LookupCommands.cpp  MMapCommands.cpp  MailCommands.cpp  MiscellanousCommands.cpp  MovementCommands.cpp  PlayerAndCreatureCommands.cpp  PlayerCommands.cpp  PlayerHonorCommands.cpp  PlayerLearnCommands.cpp  PlayerMiscCommands.cpp  PoolCommands.cpp  QuestCommands.cpp  RACommands.cpp  ReloadCommands.cpp  SelectCommands.cpp  ServerCommands.cpp  (+5 more)
src/game/DebugVis/: DebugVis.cpp  DebugVis.h  PerformanceMonitor.cpp  PerformanceMonitor.h
src/game/Maps/: MapUpdater.cpp  MapUpdater.h
src/game/MotionGenerators/: ConfusedMovementGenerator.cpp  ConfusedMovementGenerator.h  FleeingMovementGenerator.cpp  FleeingMovementGenerator.h  HomeMovementGenerator.cpp  HomeMovementGenerator.h  IdleMovementGenerator.cpp  IdleMovementGenerator.h  MotionMaster.cpp  MotionMaster.h  MovementGenerator.cpp  MovementGenerator.h  PathFinder.cpp  PathFinder.h  PointMovementGenerator.cpp  PointMovementGenerator.h  RandomMovementGenerator.cpp  RandomMovementGenerator.h  TargetedMovementGenerator.cpp  TargetedMovementGenerator.h  WaypointMovementGenerator.cpp  WaypointMovementGenerator.h  WaypointSmoothing.cpp  WaypointSmoothing.h
src/game/Object/: AggressorAI.cpp  AggressorAI.h  AhUsabilityRef.cpp  AhUsabilityRef.h  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Bag.h  Camera.cpp  Camera.h  CinematicFlyover.cpp  CinematicFlyover.h  CinematicFlyoverRoute.cpp  CinematicFlyoverRoute.h  Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  CreatureAI.cpp  CreatureAI.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h  CreatureEventAI.cpp  CreatureEventAI.h  CreatureEventAIMgr.cpp  CreatureEventAIMgr.h  DynamicObject.cpp  DynamicObject.h  Formulas.h  GMTicketMgr.cpp  GMTicketMgr.h  GameObject.cpp  GameObject.h  GameObjectAI.cpp  GameObjectAI.h  GuardAI.cpp  GuardAI.h  (+51 more)
src/game/OutdoorPvP/: CMakeLists.txt  (+8 more)
src/genrev/: CMakeLists.txt
src/ipc/: AuctionIntents.h  BoundedQueue.h  BrowseMessages.h  CMakeLists.txt  IpcChannel.cpp  IpcChannel.h  IpcClientHandler.cpp  IpcClientHandler.h  IpcLink.h  IpcMessage.cpp  IpcMessage.h  IpcOpcodes.h  IpcOutboundNotifier.h  IpcServerHandler.cpp  IpcServerHandler.h  IpcThread.cpp  IpcThread.h  IpcVersion.cpp  IpcVersion.h  WorkerSupervisor.cpp  WorkerSupervisor.h
src/mangosd/: AFThread.cpp  AFThread.h  CMakeLists.txt  CliThread.cpp  CliThread.h  GdbServerThread.cpp  GdbServerThread.h  MaNGOSsoap.cpp  Main.cpp  MangosdTest.cpp  MangosdTest.h  Master.cpp  Master.h  RASocket.cpp  RAThread.cpp  RAThread.h  WorldRunnable.cpp  WorldRunnable.h  WorldThread.cpp  WorldThread.h  mangosd.conf.dist.in  mangosd.cpp  mangosd.rc  soapC.cpp  soapServer.cpp  soapStub.h
src/modules/: CMakeLists.txt
src/playerbotd/: CMakeLists.txt  playerbotd.conf.dist.in  playerbotd.cpp
src/shared/: .gitignore  ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  Common.h  Errors.h  Log.cpp  Log.h  PosixDaemon.cpp  ServiceWin32.cpp  ServiceWin32.h  SystemConfig.h.in  Threading.cpp  Timer.h  Util.cpp  Util.h  WheatyExceptionReport.cpp  WheatyExceptionReport.h  revision.h  revision_data.h.in  revision_nr.h  revision_sql.h
src/tools/: .gitignore  CMakeLists.txt
(+1503 files in other folders)
